Feature/book (#26)
* feature/book added

* book entities are pushed

* book entities are pushed

* repositories added

* Service layer added

* Service and exception layer added

---------

Co-authored-by: Thejindraprasath <162461834+Thejindraprasath@users.noreply.github.com>